Accelerometer example changed

--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
 
     <body>
 
-        <div class="app">
+        <div class="ajax">
             <h1>Ajax Testarea</h1>
                 <form id="foo">
                     <label for="bar">A bar</label>
@@ -53,7 +53,7 @@
                 </form>
         </div>
 
-        <div class="app">
+        <div class="accelerometer">
             <h1>Example</h1>
             <p>getCurrentAcceleration</p>
         </div>
