--- a/www/index.html
+++ b/www/index.html
@@ -8,33 +8,35 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script> 
+            var watch = 0;
 
-        <script type="text/javascript" charset="utf-8">
+            window.onload = function()
+            {
+                //init();
+                document.addEventListener("deviceready", init, false);
+            }
 
-        // Wait for device API libraries to load
-        //
-        document.addEventListener("deviceready", onDeviceReady, false);
+            function init()
+            {
+                 watch = navigator.accelerometer.watchAcceleration(success, failure, {frequency: 100});
+               
 
-        // device APIs are available
-        //
-        function onDeviceReady() {
-            navigator.accelerometer.getCurrentAcceleration(onSuccess, onError);
-        }
+            }
 
-        // onSuccess: Get a snapshot of the current acceleration
-        //
-        function onSuccess(acceleration) {
-            alert('Acceleration X: ' + acceleration.x + '\n' +
-                  'Acceleration Y: ' + acceleration.y + '\n' +
-                  'Acceleration Z: ' + acceleration.z + '\n' +
-                  'Timestamp: '      + acceleration.timestamp + '\n');
-        }
+            function success(accel)
+            {
+                document.getElementById("xOut").innerHTML = accel.x;
+                document.getElementById("yOut").innerHTML = accel.y;
+                document.getElementById("zOut").innerHTML = accel.z;
+                   
+            }
 
-        // onError: Failed to get the acceleration
-        //
-        function onError() {
-            alert('onError!');
-        }
+            function failure()
+            {
+                alert("Error");
+            }
+        </script>
 
         </script>
 
@@ -53,10 +55,16 @@
                 </form>
         </div>
 
-        <div class="accelerometer">
-            <h1>Example</h1>
-            <p>getCurrentAcceleration</p>
-        </div>
+        <footer>
+        <table id="footerTable">
+        <tr>
+                            <td>X: <span id="xOut"></span></td>
+                            <td>Y: <span id="yOut"></span></td>
+                            <td>Z: <span id="zOut"></span></td>
+                    </tr>
+        </table>
+        </footer>
+
 
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
