--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
     <body>
 
         <div class="ajax">
-            <h1>Ajax Testarea</h1>
+            <h1>Ajax Testarea2</h1>
                 <form id="foo">
                     <label for="bar">A bar</label>
                     <input id="bar" name="bar" type="text" value="" />
