--- a/www/index.html
+++ b/www/index.html
@@ -1,75 +1,62 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="msapplication-tap-highlight" content="no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script> 
-            var watch = 0;
+  <head>
+    <title>Acceleration Example</title>
 
-            window.onload = function()
-            {
-                //init();
-                document.addEventListener("deviceready", init, false);
-            }
+    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+    <script type="text/javascript" charset="utf-8">
 
-            function init()
-            {
-                 watch = navigator.accelerometer.watchAcceleration(success, failure, {frequency: 100});
-               
+    // The watch id references the current `watchAcceleration`
+    var watchID = null;
 
-            }
+    // Wait for Cordova to load
+    //
+    document.addEventListener("deviceready", onDeviceReady, false);
 
-            function success(accel)
-            {
-                document.getElementById("xOut").innerHTML = accel.x;
-                document.getElementById("yOut").innerHTML = accel.y;
-                document.getElementById("zOut").innerHTML = accel.z;
-                   
-            }
+    // Cordova is ready
+    //
+    function onDeviceReady() {
+        startWatch();
+    }
 
-            function failure()
-            {
-                alert("Error");
-            }
-        </script>
+    // Start watching the acceleration
+    //
+    function startWatch() {
 
-        </script>
+        // Update acceleration every 3 seconds
+        var options = { frequency: 3000 };
 
-        <title>PGTestarea</title>
-    </head>
+        watchID = navigator.accelerometer.watchAcceleration(onSuccess, onError, options);
+    }
 
+    // Stop watching the acceleration
+    //
+    function stopWatch() {
+        if (watchID) {
+            navigator.accelerometer.clearWatch(watchID);
+            watchID = null;
+        }
+    }
 
-    <body>
+    // onSuccess: Get a snapshot of the current acceleration
+    //
+    function onSuccess(acceleration) {
+        var element = document.getElementById('accelerometer');
+        element.innerHTML = 'Acceleration X: ' + acceleration.x + '<br />' +
+                            'Acceleration Y: ' + acceleration.y + '<br />' +
+                            'Acceleration Z: ' + acceleration.z + '<br />' +
+                            'Timestamp: '      + acceleration.timestamp + '<br />';
+    }
 
-        <div class="ajax">
-            <h1>Ajax Testarea2</h1>
-                <form id="foo">
-                    <label for="bar">A bar</label>
-                    <input id="bar" name="bar" type="text" value="" />
-                    <input type="submit" value="Send" />
-                </form>
-        </div>
+    // onError: Failed to get the acceleration
+    //
+    function onError() {
+        alert('onError!');
+    }
 
-        <footer>
-        <table id="footerTable">
-        <tr>
-                            <td>X: <span id="xOut"></span></td>
-                            <td>Y: <span id="yOut"></span></td>
-                            <td>Z: <span id="zOut"></span></td>
-                    </tr>
-        </table>
-        </footer>
-
-
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-    </body>
+    </script>
+  </head>
+  <body>
+    <div id="accelerometer">Waiting for accelerometer...</div>
+  </body>
 </html>
