--- a/www/index.html
+++ b/www/index.html
@@ -8,27 +8,22 @@
 
     // The watch id references the current `watchAcceleration`
     var watchID = null;
-
     // Wait for Cordova to load
     //
     document.addEventListener("deviceready", onDeviceReady, false);
-
     // Cordova is ready
     //
     function onDeviceReady() {
         startWatch();
     }
-
     // Start watching the acceleration
     //
     function startWatch() {
-
         // Update acceleration every 3 seconds
         var options = { frequency: 3000 };
 
         watchID = navigator.accelerometer.watchAcceleration(onSuccess, onError, options);
     }
-
     // Stop watching the acceleration
     //
     function stopWatch() {
@@ -56,6 +51,17 @@
 
     </script>
   </head>
+  
+        <div class="app">
+            <h1>Ajax Testarea</h1>
+                <form id="foo">
+                    <label for="bar">A bar</label>
+                    <input id="bar" name="bar" type="text" value="" />
+                    <input type="submit" value="Send" />
+                </form>
+        </div>
+
+
   <body>
     <div id="accelerometer">Waiting for accelerometer...</div>
   </body>
