--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -14,13 +14,39 @@
     <body>
 
         <div class="app">
-            <h1>Ajax Testarea</h1>
+            <h1>How are you?</h1>
                 <form id="foo">
-                    <label for="bar">A bar</label>
-                    <input id="bar" name="bar" type="text" value="" />
+                    <label for="bar">Via Text</label>
+                    <input id="bar" name="feeling" type="text" value="" />
                     <input type="submit" value="Send" />
                 </form>
         </div>
+
+        <div>
+
+            <form id="foo2">
+                Howdy:
+                <button name="subject" type="submit" value="Fine">Fine</button>
+                <button name="subject" type="submit" value="Neutral">Neutral</button>
+                <button name="subject" type="submit" value="Bad">Bad</button>
+            </form>
+
+        </div>
+
+
+    <!-- 
+        <div>
+            <form>
+              <label for="userid">User ID :</label>
+              <input type="text" name ="userid" id="userid" />
+              <div id="div1"></div>
+              <input type="button" value ="Check" onclick="PostData()" />
+            </form>
+        </div>
+    -->
+
+
+
 
         <div id="accelerometer">Waiting for accelerometer...</div>
 
