Ajax now finally working right

--- a/www/index.html
+++ b/www/index.html
@@ -49,10 +49,10 @@
 
 
 
-
-
+        <!-- Start init - Even if the console says different - needed to initialize the js! Otherwise form gets sent via html instead of ajax! -->
         <script type="text/javascript">
             app.initialize();
         </script>
+        <!-- End init -->
     </body>
 </html>
