--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -30,17 +30,18 @@
     <div data-role="header">
     <h1>Temperature</h1>
     </div>
-
         <div id="ajax">
           <form name="ajaxformname" id="ajaxform" action="http://localhost:3000/request" method="POST">
-            <input id="btn1" name="feeling" type="submit" value="Fine">
-            <input id="btn2" name="feeling" type="submit" value="Neutral">
-            <input id="btn3" name="feeling" type="submit" value="Bad">
+            <input id="btn1" name="feeling" type="submit" value="Cold">
+            <input id="btn2" name="feeling" type="submit" value="Cool">
+            <input id="btn3" name="feeling" type="submit" value="Slightly cool">
+            <input id="btn1" name="feeling" type="submit" value="Neutral">
+            <input id="btn1" name="feeling" type="submit" value="Slightly warm">
+            <input id="btn1" name="feeling" type="submit" value="Warm">
+            <input id="btn1" name="feeling" type="submit" value="Hot">
           </form>
         </div>
 
-
-        <div id="accelerometer">Waiting for accelerometer...</div>
 
     </div>
 
@@ -49,10 +50,10 @@
 
 
 
-
-
+        <!-- Start init - Even if the console says different - needed to initialize the js! Otherwise form gets sent via html instead of ajax! -->
         <script type="text/javascript">
             app.initialize();
         </script>
+        <!-- End init -->
     </body>
 </html>
