--- a/www/index.html
+++ b/www/index.html
@@ -38,13 +38,13 @@
                 <input id="btn1" name="feeling" type="submit" value="Hot">
               </form>
             <div class="navigation">
-                <a href="#page2" class="skipbtn">Skip</a>
+                <a href="#page2" data-transition="slideup" class="skipbtn">Skip</a>
             </div>        
         </div>
     </div>
     <!-- Start Startpage aka Temperature -->
     
-    
+
     <!-- Start Second page aka illumination -->
     <div data-role="page" id="page2">
         <div data-role="header">
@@ -57,14 +57,32 @@
                 <input type="submit" name="go" id="go" value="Submit"/>
             </form>
             <div class="navigation">
-                <a href="#page1">Back</a>
-                <a href="#page3" class="skipbtn">Skip</a>
+                <a href="#page1" data-transition="slidedown">Back</a>
+                <a href="#page3" data-transition="slideup" class="skipbtn">Skip</a>
             </div>
         </div> 
     </div>
     <!-- End Second page aka illumination -->
 
 
+    <!-- Start Third page aka Noise level -->
+    <div data-role="page" id="page3">
+        <div data-role="header">
+            <h1>Noise level</h1>
+        </div>
+        <div data-role="main" class="ui-content">
+            <form name="noiseform" id="noiseform" action="http://localhost:3000/request" method="POST">
+                <label for="lighting">From silent to noisy (1 is silent)</label>
+                <input type="range" name="rate" id="rate" min="1" max="7" />
+                <input type="submit" name="go" id="go" value="Submit"/>
+            </form>
+            <div class="navigation">
+                <a href="#page2" data-transition="slidedown">Back</a>
+                <a href="#page3" data-transition="slideup" class="skipbtn">Skip</a>
+            </div>
+        </div> 
+    </div>
+    <!-- End Third page aka Noise level -->
 
 
 
