--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -32,13 +32,13 @@
                 <input id="btn1" name="feeling" type="submit" value="Cold">
                 <input id="btn2" name="feeling" type="submit" value="Cool">
                 <input id="btn3" name="feeling" type="submit" value="Slightly cool">
-                <input id="btn1" name="feeling" type="submit" value="Neutral">
-                <input id="btn1" name="feeling" type="submit" value="Slightly warm">
-                <input id="btn1" name="feeling" type="submit" value="Warm">
-                <input id="btn1" name="feeling" type="submit" value="Hot">
+                <input id="btn4" name="feeling" type="submit" value="Neutral">
+                <input id="btn5" name="feeling" type="submit" value="Slightly warm">
+                <input id="btn6" name="feeling" type="submit" value="Warm">
+                <input id="btn7" name="feeling" type="submit" value="Hot">
               </form>
             <div class="navigation">
-                <a href="#page2" class="skipbtn">Skip</a>
+                <a href="#page2" data-transition="slideup" class="skipbtn">Skip</a>
             </div>        
         </div>
     </div>
@@ -57,8 +57,8 @@
                 <input type="submit" name="go" id="go" value="Submit"/>
             </form>
             <div class="navigation">
-                <a href="#page1">Back</a>
-                <a href="#page3" class="skipbtn">Skip</a>
+                <a href="#page1" data-transition="slidedown">Back</a>
+                <a href="#page3" data-transition="slideup" class="skipbtn">Skip</a>
             </div>
         </div> 
     </div>
@@ -66,19 +66,19 @@
 
 
     <!-- Start Third page aka Noise level -->
-    <div data-role="page" id="page2">
+    <div data-role="page" id="page3">
         <div data-role="header">
-            <h1>Lighting</h1>
+            <h1>Noise level</h1>
         </div>
         <div data-role="main" class="ui-content">
-            <form name="lightform" id="lightform" action="http://localhost:3000/request" method="POST">
-                <label for="lighting">From dark to bright (1 is the darkest)</label>
+            <form name="noiseform" id="noiseform" action="http://localhost:3000/request" method="POST">
+                <label for="noise">From silent to noisy (1 is silent)</label>
                 <input type="range" name="rate" id="rate" min="1" max="7" />
                 <input type="submit" name="go" id="go" value="Submit"/>
             </form>
             <div class="navigation">
-                <a href="#page1">Back</a>
-                <a href="#page3" class="skipbtn">Skip</a>
+                <a href="#page2" data-transition="slidedown">Back</a>
+                <a href="#page3" data-transition="slideup" class="skipbtn">Skip</a>
             </div>
         </div> 
     </div>
