css for button padding updated

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -54,7 +54,7 @@
             <form name="lightform" id="lightform" action="http://localhost:3000/request" method="POST">
                 <label for="lighting">From dark to bright (1 is the darkest)</label>
                 <input type="range" name="rate" id="rate" min="1" max="7" />
-                <input type="submit" name="go" id="go" value="Submit"/>
+                <input type="submit" name="go" id="go2" value="Submit"/>
             </form>
             <div class="navigation">
                 <a href="#page1" data-transition="slidedown">Back</a>
